# Heritage-Polimorphism

Desafio/: Grafo.cpp  Grafo.hpp  main.cpp
ex_herança/: CMakeLists.txt  estagiario.cpp  estagiario.hpp  funcionario.hpp  funcionarioReg.cpp  funcionarioReg.hpp  funcionarios.cpp  gerente.cpp  gerente.hpp  main.cpp
ex_polimorfismo/: caminhao.cpp  caminhao.hpp  main.cpp  van.cpp  van.hpp  veiculo.cpp  veiculo.hpp
